--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Digital Work Day</title>
+    <title>Digital dia de escritório</title>
     <link rel="icon" href="assets/favicon-32x32.png" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,7 +16,7 @@
 
   <body>
     <div class="container">
-      <h1 class="phrase">O próximo dia de trabalho é <span id="day"></span></h1>
+      <h1 class="phrase">O próximo dia de escritório é <span id="day"></span></h1>
       <h1 class="date"><span id="date"></span></h1>
     </div>
     <script src="scripts.js"></script>
