--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
 
   <body>
     <div class="container">
-      <h1 class="phrase">O próximo dia de escritório é <span id="day"></span></h1>
+      <h1 class="phrase">
+        O próximo dia de escritório é <span id="day"></span>
+      </h1>
       <h1 class="date"><span id="date"></span></h1>
     </div>
+    <div class="calendars" id="calendars"></div>
     <script src="scripts.js"></script>
   </body>
 </html>
