feat: porto office

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 
   <body>
     <div class="container">
+      <div class="location">
+        <label for="city">Se vais para </label>
+        <select name="city" id="city">
+          <option value="lisboa">Lisboa</option>
+          <option value="porto">Porto</option>
+        </select>
+      </div>
       <h1 class="phrase">
         O próximo dia de escritório é <span id="day"></span>
       </h1>
